--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -33,12 +33,61 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#|export\n",
+    "def say_hello(to):\n",
+    "    \"Say hello to somebody\"\n",
+    "    return f'Hello {to}!'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can use this to say hello to Sylvain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Sylvain!'"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "say_hello(\"Sylvain\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from fastcore.test import *\n",
+    "test_eq(say_hello(\"Jeremy\"), \"Hello Jeremy!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
