--- a/index.ipynb
+++ b/index.ipynb
@@ -7,16 +7,16 @@
    "outputs": [],
    "source": [
     "#hide\n",
-    "from your_lib.core import *"
+    "from hellonbdev import *"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Project name here\n",
+    "# Welcome to hellonbdev\n",
     "\n",
-    "> Summary description here."
+    "> An amazing tutorial"
    ]
   },
   {
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "'Hello Your name here!'"
       ]
      },
      "execution_count": null,
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "say_hello(\"Your name here\")"
    ]
   },
   {
@@ -84,7 +84,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   }
